# Barber-API

./: .env.example  .gitignore  ANALISE_CODIGO.md  README.md  RELATORIO_CORRECOES.md  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 3d5c4d64a722_add_status_and_created_at_in_table_.py  5078853933d2_add_table_userservice.py  528f58129840_add_user_service_id_remove_service_id_.py  5c3627263fd5_create_tables.py  656bb91a6a0f_menssagem.py  7036231218ff_create_tables.py  9952ee91cf72_add_table_permissions.py  f7c7de0da5bc_create_tebles.py  f8c63acd32c1_add_notification_in_table_appointment.py
app/: main.py  models.py
app/core/: auth.py  config.py  database.py  dependencies.py
app/models/: __init__.py  appointment.py  base.py  client.py  permission.py  schedule.py  service.py  slot.py  tenant.py  user.py
app/routes/: appointment.py  auth.py  (+7 more)
core/: auth.py  config.py  database.py  dependencies.py
docker/: docker-compose.yml
routes/: agendamentos.py  appointment.py  auth.py  clientes.py  services.py  servicos.py  slots.py  tenants.py  user.py  user_service.py  usuarios.py  workschedules.py
schemas/: agendamento.py  appointment_schema.py  client_schema.py  cliente.py  service_schema.py  servico.py  slot.py  slot_schema.py  tenant.py  tenant_schema.py  usuario.py  work_schedule.py
services/: agendamento_service.py  appointment_service.py  client_service.py  cliente_service.py  service_service.py  servico_service.py  slot_service.py  tenant_service.py  user_service.py  user_service_service.py  usuario_service.py  work_schedule_service.py
tests/: conftest.py  test_main.py
(+35 files in other folders)
