[project]
name = "barber-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (==0.136.1)",
    "uvicorn (==0.46.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "alembic (==1.18.4)",
    "bcrypt (==4.0.1)",
    "cryptography (==48.0.0)",
    "passlib (==1.7.4)",
    "pydantic (==2.13.4)",
    "python-dotenv (==1.2.2)",
    "python-jose (==3.5.0)",
    "python-multipart (==0.0.28)",
    "sqlalchemy (==2.0.49)",
    "apscheduler (>=3.11.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]        # adiciona a raiz ao sys.path
testpaths = ["teste"]     # onde estão seus testes